--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.security.user.password=admin
 # Placeholder DB config
 spring.datasource.url=jdbc:mysql://localhost:3306/finguard
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
