--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
             <version>3.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+
+
         <!-- Lombok (Optional for auto-generating getters/setters) -->
         <dependency>
             <groupId>org.projectlombok</groupId>
