Successfully written and executed integration test for UserController endpoints

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,21 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <!-- Spring Boot Test Starter (includes JUnit, Mockito) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Spring Security Test -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
         <!-- MySQL Driver (or H2/PostgreSQL if you're using that instead) -->
         <dependency>
             <groupId>com.mysql</groupId>
